--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "esbuild-typescript-template",
   "version": "0.0.0",
-  "main": "dist/index.js",
   "author": "Alexis Munsayac <alexis.munsayac@gmail.com>",
   "license": "MIT",
   "private": false,
@@ -9,14 +8,17 @@
     "dist",
     "src"
   ],
+  "main": "dist/index.js",
   "module": "./dist/index.esm.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "node build-src",
+    "build": "tsc --outDir dist --emitDeclarationOnly && node build-src",
     "check": "tsc --noEmit"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
+    "esbuild": "^0.6.26",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-import-resolver-node": "^0.3.4",
@@ -25,7 +27,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "esbuild": "^0.6.26",
+    "fs-extra": "^9.0.1",
     "tslib": "^2.0.0",
     "typescript": "^3.9.2"
   }
