--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "module": "./dist/index.esm.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "node build-src && tsc --outDir dist --emitDeclarationOnly",
+    "build": "node build-src",
+    "watch": "node build-src -w",
     "check": "tsc --noEmit"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
+    "chokidar": "^3.4.2",
     "esbuild": "^0.6.26",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
